--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -1,8 +1,32 @@
+
 {% extends "app/base.html" %}
+{% load app_filters %}
+
 {% block content %}
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
+<div class="container mt-5">
+    <h2 class="mb-4">新しいトランザクションを作成</h2>
+    <form method="post" class="w-100">
+        {% csrf_token %}
+        <div class="form-group row">
+            {{ form.non_field_errors }}
+            {% for field in form %}
+                <div class="col-md-8 offset-md-2">
+                    <div class="form-group">
+                        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                        {{ field|add_class:"form-control" }}
+                        <small class="form-text text-muted">{{ field.help_text }}</small>
+                        {% if field.errors %}
+                            <div class="alert alert-danger mt-2">{{ field.errors }}</div>
+                        {% endif %}
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <div class="form-group row">
+            <div class="col-md-8 offset-md-2">
+                <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
